<resources>
    <string name="app_name">GSB</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="token">Token :</string>
    <string name="d_connexion">Déconnexion</string>
    <string name="r_le">Rôle :</string>
    <string name="email">Email :</string>
    <string name="nom">Nom :</string>
    <string name="pr_nom">Prénom :</string>
    <string name="id">ID :</string>
    <string name="message">Message :</string>
    <string name="informations_de_connexion">Informations de connexion</string>
    <string name="connexion">connexion\n</string>
</resources>